tooling/nargo_cli/tests/snapshots/compile_failure/brillig_mut_ref_from_acir/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: unused variable y
  ┌─ src/main.nr:5:23
  │
5 │ fn main(mut x: Field, y: pub Field) {
  │                       - unused variable
  │

error: Cannot pass mutable reference `&mut Field` from a constrained runtime to an unconstrained runtime
  ┌─ src/main.nr:7:48
  │
7 │     let returned_x = unsafe { mut_ref_identity(&mut x) };
  │                                                ------
  │

Aborting due to 1 previous error
